--- a/app/views/main/community.html
+++ b/app/views/main/community.html
@@ -12,7 +12,7 @@
             <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" 
             data-wow-delay="600ms">
                 <div class="feature-wrap">
-                    <i class="icon-exit"></i>
+                    <i class="icon-drawer3"></i>
                     <h2>Idea2Product</h2>
                     <h3>Idea2Product adalah kumpulan tugas yang akan mendorong gerakan OpenSource. Kami (tim BlueOxygen) akan membuat IDE Anda dan menjadikannya aplikasi yang dapat bermanfaat bagi semua orang.</h3>
                 </div>
@@ -21,7 +21,7 @@
             <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" 
             data-wow-delay="600ms">
                 <div class="feature-wrap">
-                    <i class="icon-wrench"></i>
+                    <i class="icon-file2"></i>
                     <h2>Wiki</h2>
                     <h3>Kami memiliki sebuah direktori untuk dokumentasi produk Blueoxygen kami di Wikipedia. Dalam Wikipedia ini semua orang dapat meninjau atau mungkin menambahkan sesuatu tentang produk tersebut. Anda dapat membukanya 
                     <a href="http://wiki.blueoxygen.org/">disini.</a>
@@ -32,7 +32,7 @@
             <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" 
             data-wow-delay="600ms">
                 <div class="feature-wrap">
-                    <i class="icon-wrench"></i>
+                    <i class="icon-users"></i>
                     <h2>Forum</h2>
                     <h3>Setiap pertanyaan yang berkaitan dengan BlueOxygen dapat disampaikan di Forum BlueOxygen. Silahkan kunjungi forum kami di sini. http://javanet/projects/blueoxygen/forums
                     </h3>
@@ -46,7 +46,7 @@
             <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" 
             data-wow-delay="600ms">
                 <div class="feature-wrap">
-                    <i class="icon-exit"></i>
+                    <i class="icon-location"></i>
                     <h2>Issue Tracking</h2>
                     <h3>Setiap proyek didalam BlueOxygen, berada di Java.net, silahkan anda follow JIRA  didalam Java.net untuk membuat issue atau Kunjungi http://blueoxygen.java.net tahu proyek kami.</h3>
                 </div>
@@ -55,7 +55,7 @@
             <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" 
             data-wow-delay="600ms">
                 <div class="feature-wrap">
-                    <i class="icon-wrench"></i>
+                    <i class="icon-coin"></i>
                     <h2>Donation</h2>
                     <h3>Bantu kami untuk melanjutkan development kami. Anda dapat mengirimkan uang atau cara lain untuk membantu kami bertahan, kirimkan pekerjaan barang Java, kami senang untuk melakukannya, tentu saja harga kami sangat kompetitif. Untuk informasi lebih lanjut tentang program donasi ini, Anda dapat mengirim email ke frans di blueoxygen.org.</h3>
                 </div>
@@ -64,7 +64,7 @@
             <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" 
             data-wow-delay="600ms">
                 <div class="feature-wrap">
-                    <i class="icon-wrench"></i>
+                    <i class="icon-support"></i>
                     <h2>Support Service</h2>
                     <h3>Kami menyediakan berbagai layanan dukungan seperti Outsourcing dan Training</h3>
                 </div>
