--- a/app/views/main/downloads.html
+++ b/app/views/main/downloads.html
@@ -13,7 +13,7 @@
             <div class="col-md-6 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" 
             data-wow-delay="600ms">
                 <div class="feature-wrap">
-                    <i class="icon-exit"></i>
+                    <i class="icon-web9"></i>
                     <h2>Software</h2>
                     <h3>Meruvian juga memiliki beberapa perangkat lunak yang dapat Anda download di sf.net dan java.net.</h3>
                 </div>
@@ -22,7 +22,7 @@
             <div class="col-md-6 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" 
             data-wow-delay="600ms">
                 <div class="feature-wrap">
-                    <i class="icon-wrench"></i>
+                    <i class="icon-copy"></i>
                     <h2>Documentation</h2>
                     <h3>Untuk semua dokumentasi masing-masing software blueoxygen, silahkan klik 
                     <a href="http://wiki.blueoxygen.org/">disini.</a>
