--- a/app/views/main/platform.html
+++ b/app/views/main/platform.html
@@ -13,12 +13,12 @@
                     <div class="pull-left">
                         <span class="fa-stack fa-2x">
                             <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                            <i class="icon-graduation30 fa-stack-1x fa-inverse"></i>
+                            <i class="icon-stack fa-stack-1x fa-inverse"></i>
                         </span> 
                     </div>
                     <div class="media-body">
                         <h4>Cimande Platforms</h4>
-                        <p></p>
+                        <p>Web Platform Workspace, Web Mobile Platform Workspace, Metadata Abstraction Generator, Android application.</p>
                     </div>
                 </div>
             </div>
@@ -28,12 +28,12 @@
                     <div class="pull-left">
                         <span class="fa-stack fa-2x">
                             <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                            <i class="icon-football78 fa-stack-1x fa-inverse"></i>
+                            <i class="icon-spinner fa-stack-1x fa-inverse"></i>
                         </span> 
                     </div>
                     <div class="media-body">
                         <h4>Development Cycle</h4>
-                        <p></p>
+                        <p>Kami mengembankan platform ini menjadi suatu ekosistem dan Apache Maven menjadi kunci penting dalam proyek kami.</p>
                     </div>
                 </div>
             </div>
@@ -43,12 +43,12 @@
                     <div class="pull-left">
                         <span class="fa-stack fa-2x">
                             <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                            <i class="icon-mobile2 fa-stack-1x fa-inverse"></i>
+                            <i class="icon-office fa-stack-1x fa-inverse"></i>
                         </span> 
                     </div>
                     <div class="media-body">
                         <h4>Architecture</h4>
-                        <p></p>
+                        <p>Cimande adalah middleware untuk membantu developer mengembangkan aplikasi bisnis dengan lebih cepat. Idenya kelihatan seperti Spring tapi kami memiliki fitur people management.</p>
                     </div>
                 </div>
             </div>
@@ -61,12 +61,12 @@
                     <div class="pull-left">
                         <span class="fa-stack fa-2x">
                             <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                            <i class="icon-upload2 fa-stack-1x fa-inverse"></i>
+                            <i class="icon-cog2 fa-stack-1x fa-inverse"></i>
                         </span> 
                     </div>
                     <div class="media-body">
                         <h4>Technologies</h4>
-                        <p></p>
+                        <p>Teknologi Cimande menggunakan : Struts2, Hibernate, REST, Spring, Spring Social, Maven, Ajax, Velocity, Freemarker, JSP, Tomcat, MySQL dan Eclipse.</p>
                     </div>
                 </div>
             </div>
@@ -76,12 +76,12 @@
                     <div class="pull-left">
                         <span class="fa-stack fa-2x">
                             <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                            <i class="icon-screen fa-stack-1x fa-inverse"></i>
+                            <i class="icon-link fa-stack-1x fa-inverse"></i>
                         </span> 
                     </div>
                     <div class="media-body">
                         <h4>Integration</h4>
-                        <p><!--  --></p>
+                        <p>Gabungan dari beberapa produk atau aplikasi yang dibangun dengan Cimande sehingga memiliki fitur yang lebih lengkap dan kuliatas yang lebih baik.</p>
                     </div>
                 </div>
             </div>
@@ -91,12 +91,12 @@
                     <div class="pull-left">
                         <span class="fa-stack fa-2x">
                             <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                            <i class="icon-cabinet fa-stack-1x fa-inverse"></i>
+                            <i class="icon-spinner2 fa-stack-1x fa-inverse"></i>
                         </span> 
                     </div>
                     <div class="media-body">
                         <h4>Module DevCycle</h4>
-                        <p></p>
+                        <p>Pengembangan modul tingkat tinggi menjadi wadah pengembangan, yang dapat menghasilkan modul aplikasi yang dapat diintegrasikan ke Cimande atau aplikasi yang didasarkan pada spesifikasi Cimande.</p>
                     </div>
                 </div>
             </div>
@@ -109,12 +109,12 @@
                   <div class="pull-left">
                       <span class="fa-stack fa-2x">
                           <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                          <i class="icon-coin fa-stack-1x fa-inverse"></i>
+                          <i class="icon-globe fa-stack-1x fa-inverse"></i>
                       </span> 
                   </div>
                   <div class="media-body">
                       <h4>Galaxy</h4>
-                      <p></p>
+                      <p>Sebuah konsep yang membuat proyek Cimande tidak hanya wadah untuk semua proyek BlueOxygen, tetapi juga konektor. Cimande Galaxy (incubation) dapat diinstal secara sendiri atau bagian dari proyek lain.</p>
                   </div>
               </div>
           </div>  
@@ -124,12 +124,12 @@
                   <div class="pull-left">
                       <span class="fa-stack fa-2x">
                           <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                          <i class="icon-foot3 fa-stack-1x fa-inverse"></i>
+                          <i class="icon-table fa-stack-1x fa-inverse"></i>
                       </span> 
                   </div>
                   <div class="media-body">
                       <h4>ERD</h4>
-                      <p></p>
+                      <p>Diagram hubungan entitas yang membantu anda memahami bagaimana cara kerja Cimande. </p>
                   </div>
               </div>
           </div>
@@ -139,12 +139,12 @@
                   <div class="pull-left">
                       <span class="fa-stack fa-2x">
                           <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                          <i class="icon-responsive16 fa-stack-1x fa-inverse"></i>
+                          <i class="icon-list2 fa-stack-1x fa-inverse"></i>
                       </span>
                   </div>
                   <div class="media-body">
                       <h4>DropList</h4>
-                      <p></p>
+                      <p>Elemen pengontrol grafis berupa pilihan berbasis konten, mirip dengan kotak pilihan, yang memungkinkan pengguna untuk memilih salah satu pilihan pada daftar.</p>
                   </div>
               </div>
           </div>
@@ -157,12 +157,12 @@
                     <div class="pull-left">
                         <span class="fa-stack fa-2x">
                             <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                            <i class="icon-upload2 fa-stack-1x fa-inverse"></i>
+                            <i class="icon-loop2 fa-stack-1x fa-inverse"></i>
                         </span> 
                     </div>
                     <div class="media-body">
                         <h4>SDK Makes SDK</h4>
-                        <p></p>
+                        <p>Sejak 1.2.3, kami hanya merilis Cimande dalam bentuk SDK bundel. SDK akan membantu anda membuat aplikasi pada Cimande, menjadi aplikasi lain atau membuat SDK Anda sendiri.</p>
                     </div>
                 </div>
             </div>
@@ -172,12 +172,12 @@
                     <div class="pull-left">
                         <span class="fa-stack fa-2x">
                             <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                            <i class="icon-screen fa-stack-1x fa-inverse"></i>
+                            <i class="icon-wrench fa-stack-1x fa-inverse"></i>
                         </span> 
                     </div>
                     <div class="media-body">
                         <h4>Deployment</h4>
-                        <p></p>
+                        <p>Pengembangaan mekanisme untuk men-deploy aplikasi menggunakan Cimande untuk digunakan dalam produk aplikasi lain, dan dapat dijalankan secara tersendiri.</p>
                     </div>
                 </div>
             </div>
